PROD-12-18-19/force-app/main/default/objects/Opportunity_Snapshot__c/Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Snapshot</label>
    <nameField>
        <displayFormat>OS-{0000000000}</displayFormat>
        <label>Opportunity Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>