PROD-12-18-19/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>