PROD-12-18-19/force-app/main/default/objects/Opportunity_Snapshot__c/fields/Probability_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Probability_Picklist__c</fullName>
    <description>Probability picklist value</description>
    <inlineHelpText>Probability picklist value</inlineHelpText>
    <label>Probability</label>
    <length>50</length>
    <type>Text</type>
</CustomField>